# service-product

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose-db.yml  docker-compose.yml
.github/: CODEOWNERS  test.yml
.github/workflows/: test.yml
migrations/: 20221227221245_create-table.sql  20221229223748_sample-products.sql
scripts/: build.sh  init.sh
src/: main.rs
src/app/: app_state.rs  error.rs  mod.rs  repository.rs  service.rs
src/controller/: category.rs  product.rs
src/controllers/: category.rs  product.rs
src/core/: app_state.rs  error.rs  mod.rs  repository.rs
src/entity/: category.rs  mod.rs
src/model/: product.rs
src/repositories/: category.rs  product.rs
src/repository/: category.rs  mod.rs  product.rs
src/service/: category.rs  product.rs
src/services/: category.rs  product.rs
src/util/: mod.rs
src/utils/: internal_error.rs  pagination.rs
