[package]
name = "service-product"
version = "1.0.0"
edition = "2021"
author = "VS Academy"
publish = false


[dependencies]
axum-macros = "0.3.0"
axum = { version = "0.6"}
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "any", "postgres", "decimal", "chrono", "uuid"] }
dotenvy = "0.15"
async-trait = "0.1.60"
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.27"
rust_decimal_macros = "1.27"
error-stack = "0.2"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive", "env"]}
